...
    },
    'loading': {
      AppLocale.en: 'Loading...',
      AppLocale.ne: 'लोड हुँदैछ...',
    },
    'welcome': {
      AppLocale.en: 'Welcome',
      AppLocale.ne: 'स्वागतम',
    },
    'settings': {
      AppLocale.en: 'Settings',
      AppLocale.ne: 'सेटिङ',
    },
...
